--- a/javaclass11/MainUI.css
+++ b/javaclass11/MainUI.css
@@ -8,9 +8,9 @@ body {
 }
 
 #container {
-  width: 120%;
-  height: 280px;
-  margin: 0 auto;
+  width: 100%;
+  height: 240px;
+  margin: 0 0 0 0;
   background-color: #fff;
   border: 1px solid #f4f4f4;
 }
@@ -19,5 +19,68 @@ body {
 #MainWelcome {
   height: 280px;
   margin-top: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  vertical-align: top;
   background-image: url("../css/images/4.jpg");
 }
+
+.header1 {
+  margin-top: 0px;
+  margin-left: 0px;
+}
+
+.signcontainer {
+  margin-top: 25px;
+  margin-left: 30px;
+  border: 2px solid gray;
+  width: 400px;
+  height: 200px;
+  border-radius: 15px; 
+}
+
+.signIn {
+  margin-top: 20px;
+  margin-left: 10px;
+  margin-bottom: 15px;
+}
+
+.mainBtns {
+  margin-top: 10px;
+}
+
+.topImages {
+  width: 300px;
+  height: 200px;
+  float: right;
+  display: grid;
+  grid-template-areas: 
+  'img1''img2''img3''img4';
+  margin: 0px 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
