--- a/javaclass11/MainUI_Test.css
+++ b/javaclass11/MainUI_Test.css
@@ -34,8 +34,8 @@ body {
   margin-top: 25px;
   margin-left: 30px;
   border: 2px solid gray;
-  width: 100%;
-  /* height: 200px; */
+  width: 400px;
+  height: 200px;
   border-radius: 15px; 
 }
 
@@ -50,23 +50,15 @@ body {
 }
 
 .topImages {
-  /* width: 300px;
-  height: 200px;
   display: grid;
-  grid-template-areas: 
-  'img1''img2''img3''img4';
-  margin: 0px 10px; */
-  float: left;
+  background-color: #ccc;
+  grid-gap: 10px;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 0px 50px;
+  height: 400px;
 }
 
-.login {
-  float: left;
-}
 
-.img1 {
-  float: left;
-  width: 200px;
-}
 
 
 
