--- a/JSP_project/javaclass11/javaclass11/MainUI.css
+++ b/JSP_project/javaclass11/javaclass11/MainUI.css
@@ -1,86 +1,25 @@
+/* 바디 초기화 */
 body {
   margin: 0px;
   padding: 0px;
-  font-family: '맑은 고딕', '궁서', '굴림';
+  font-family: 'Bebas Neue','궁서체';
   font-size: 1em;
   background: linear-gradient(to bottom , skyblue , white 50%);
   background-attachment: fixed;
 }
 
+.header1 {
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 2.5em;
+  font-weight: 400;
+  font-style: normal;
+  /* background-image: url(../../images/4.jpg); */
+}
+
+
 #container {
-  width: 100%;
-  height: 240px;
-  margin: 0 0 0 0;
-  background-color: #fff;
-  border: 1px solid #f4f4f4;
+  width: 1920px;
+  height: 200px;
 }
 
 /* 타이틀 영역(header) */
-#MainWelcome {
-  height: 280px;
-  margin-top: 0px;
-  margin-left: 0px;
-  margin-right: 0px;
-  vertical-align: top;
-  background-image: url("../css/images/4.jpg");
-}
-
-.header1 {
-  margin-top: 0px;
-  margin-left: 0px;
-}
-
-.signcontainer {
-  margin-top: 25px;
-  margin-left: 30px;
-  width: 100%;
-  /* height: 200px; */
-}
-
-.signIn {
-  margin-top: 20px;
-  margin-left: 10px;
-  margin-bottom: 15px;
-}
-
-.mainBtns {
-  margin-top: 10px;
-}
-
-.topImages {
-  float: left;
-}
-
-.login {
-  float: left;
-  line-height: 3px;
-}
-
-.img1 {
-  float: left;
-  width: 200px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
